2007-06-09 Carlos Nieves Onega <cnieves (AT) iespana (DOT) es>

	* include/prototype.h, src/f_print.c: Added EPS support.

	Applied patch #1713747 from Wojciech Kazubski adding support 
	for EPS in f_print_header function. Thanks.

2007-06-07 Ales Hvezda   <ahvezda@geda.seul.org>

        * include/struct.h, src/s_toplevel.c: Applied patch from Ivan
        Stankovic that displays entered characters in the status bar.
	This patch added keyaccel_string to the TOPLEVEL structure.

2007-06-04 Peter Brett <peter@peter-b.co.uk>

	* src/g_rc.c, src/g_smob.c, src/s_clib.c: Replace deprecated Guile
	functions & macros.

	Replace deprecated SCM_STRINGP, SCM_INUM, SCM_INUMP & SCM_MAKINUM
	with recommended equivalents for Guile 1.8.

2007-06-02 Peter Brett <peter@peter-b.co.uk>

	* configure.ac, src/g_basic.c: Improve Guile configure checks &
	remove 1.4 compat. code.

	Removes compatibility code for Guile 1.4, and makes configure
	scripts check for actual Guile version.

2007-05-28 Peter Brett <peter@peter-b.co.uk>

	* configure.ac: Require Guile 1.8.x

	  Guile 1.8.x is the current stable series, and 1.6.x is getting
	  old.  Require 1.8.x for libgeda.
	
	* src/g_rc.c, src/s_clib.c: Component library documentation
	  updates.

	  Various changes to update & improve component library
	  documentation.
	
	* src/s_clib.c: Match .sym suffix case-insensively when building
	  component library.

	  When building symbol lists for directory-based component
	  sources, match the ".sym" filename suffix case-insensitively.
	  Note that for backward- compatibility (and sanity on systems
	  with case-sensitive filenames) searching for symbols does match
	  symbols case-sensitively ("plug.SYM" will not satisfy a search
	  for "plug.sym").
	
	* include/prototype.h, src/g_rc.c, src/g_register.c, src/s_clib.c:
	  Add component sources based on Scheme procedures.

	  Add the ability to use a set of Scheme procedures which list and